# flux

./: .dockerignore  .env.dev.example  .env.example  .flux_test_res.json  .flux_test_res_2.json  .flux_test_res_3.json  .flux_test_res_4.json  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile.unified  LICENSE  LOCAL_E2E.md  Makefile  README.md  TESTING.md  TRADEMARKS.md  clean.js  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  flux.json  package-lock.json  package.json  project.toml  test-crypto-import.js  test-crypto-replay.sh  test-crypto.js  test-crypto2.js  test-crypto3.js  test-perf.js
agent/: Cargo.toml
agent/src/: lib.rs  llm.rs  loop_runner.rs  recording.rs  registry.rs  rules.rs  schema.rs  tools.rs
api/: Cargo.toml  Dockerfile
api/.sqlx/: query-0623f90f48c6e116d06d5e517c5c8a1b213d6e09d8401b6bf2c7f0bcb8a2543c.json  query-07eba0b586de28d5fb047c1e025560f42173cd4b6d0ce98af7739ef29e487a94.json  query-1036c5e4e79b7f9f728fd718f1d7b5e7aeda5aa31879c53c41faec3f91432bb0.json  query-16a7b9760f53ed0eb0659558d5220f82de722bba2270beb2398858a86f5fd621.json  query-3f768a3f0cb70388bc2bead293668d55cc65f8c28c00933aaee8ec776af22e1a.json  query-4521b9f93f1cb67fecaf93bd2c9fca340b09e4ef8ea3b2de88f7466379d9edd8.json  query-4589bb62eff52077146892d34c399ae58330a1831944497fdbc6e1b449dbb829.json  query-4c6070d98e87657cc66895fd46a98461c062dc1ea36a476dad78ec62bd173f53.json  query-5c83faf7c9aeb8ee4122a655cc1670d352c72820bdd7545515e551d2ada2baf9.json  query-7dd1ec3918c6f3b8b75c7bd5c607a739746b856e9f58de9370f06fc313c48be1.json  query-836b213f35950b51ae88623d277f579a91c1950bd8d0ac4209e7683d5ced71e5.json  query-8e1a145c8d2a2bcba33148bd75d21c568375ca7c8d38f9d394def6558c729ba2.json  query-93af0a305d0f1a288805d58020aacf186a2f0fbb320b78449e956d7b1756b8c0.json  query-aba1efe53716c59172cbd16b1796fadd771e6aadf02fae83b4d4cc1864aaab4a.json  query-abe58ba334d37a1e783e7892db26f74cab39606e986158f85e93024636983e16.json  query-adfdc64011ed801a77d384042ef558737a05ce497ab57709f22d298cb61791cd.json  query-af8608c3c1404186e2d3cdfb7d8240153390b17331583e2399daba5b5971881e.json  query-c69c2c0100139e1f72acebc1d8109048c289011af8c6e2145d818d1b74b340a5.json  query-c6fc0006109a2a6d96d20541f3c3a3d7d519e76029b18b63cf07cfaad3d248eb.json  query-cb9eec1ad7075696be536268396ad8cb17e9afc796e49c03ac047aeb8b729823.json  query-cc833d96623aed81abece04857a2d7ca50c439137669d6c58f22e90a7d5f8ae8.json  query-cca182dc8ec968bfc709f13e265c9871c4bf2cfbf2b4d2f6dcf62c6396813a8e.json  query-cf8c0392d458b7a506e1b825bc64acc9b9da2ccac5960d31651244fbc3d5b445.json  query-d1ee17eea4f3ada2c1076ce24dee62df649a3a7db47f1691f17b4c0573a53454.json  query-dceedef60abc23d399e79ac041625f8f754da16ed882759e325ca4148c12478a.json  query-ef293725bef7d1ae587cc182b5722bff53f4319094e084542124ffa5244abb3e.json  query-f2e93a1d7dd1c72db9c635f762d9198e99649bd728a45a16620b6d0bd1a39b38.json
api/migrations/: 20240307000002_tenants.sql  20240307000007_refactor_secrets.sql  20240308000012_create_gateway_routes.sql  20260308000018_schema_versions.sql  20260310000019_platform_logs.sql  20260310000020_add_span_type.sql  20260310000022_demo.sql  20260311000023_trace_requests.sql  20260311000024_state_mutations.sql  20260311000027_storage_providers.sql
api/src/: app.rs  error.rs  lib.rs  main.rs  validation.rs
cli/: Cargo.toml  build.rs
cli/scripts/: flux-schema-compiler.ts
cli/src/: add.rs  agent.rs  api_key.rs  auth.rs  bin_resolution.rs  bisect.rs  build.rs  check.rs  client.rs  config.rs  config_cmd.rs  context.rs  create.rs  db.rs  db_push.rs  debug.rs  deploy.rs  deployments.rs  dev.rs  doctor.rs  env_cmd.rs  errors.rs  event.rs  events.rs  exec.rs  explain.rs  functions.rs  gateway.rs  generate.rs  grpc.rs  incident.rs  init.rs  invoke.rs  login.rs  logs.rs  main.rs  monitor.rs  new_function.rs  open.rs  process_state.rs  (+34 more)
cli/tests/: cli_tests.rs
data-engine/: Cargo.toml  Dockerfile
data-engine/migrations/: 0001_internal_schema.sql  0002_table_metadata.sql  0003_column_metadata_and_hooks.sql  0004_events_and_relationships.sql  0005_event_subscriptions.sql  20260309000006_event_delivery_retry.sql  20260309000011_span_id.sql  20260311000012_mutation_seq_changed_fields.sql  20260311000013_trace_requests.sql  20260311000014_mutation_ts.sql  20260311000015_mutation_pk_latest_index.sql  20260311000016_project_databases.sql  20260311000017_schema_snapshots.sql
data-engine/src/: config.rs  lib.rs  main.rs  query_guard.rs  state.rs  telemetry.rs
gateway/: .dockerignore  .env.example  Cargo.toml  Dockerfile
gateway/src/: config.rs  lib.rs  main.rs  metrics.rs  router.rs  state.rs
queue/: Cargo.toml  Dockerfile
queue/migrations/: 0005_add_job_timeout.sql  0006_add_started_at.sql  20240307000001_init.sql  20240308000014_add_tenant_project_slugs.sql  20240308000015_update_route_constraints.sql
queue/src/: dispatch.rs  lib.rs  main.rs  state.rs
runtime/: .dockerignore  Cargo.toml  Dockerfile  Dockerfile.prod  build.rs  test_execution.js  test_execution_valid.js
runtime/reports/: README.md  flux-integration  node-tests.json  npm-tests.json  summary.md  web-tests.json
runtime/runners/: clean.cjs  generate-report.ts  package-lock.json  package.json  run-flux-integration.ts  run-node-tests.ts  run-npm-tests.ts  run-test262.ts  run-web-tests.ts  tsconfig.json
runtime/scripts/: setup-external-tests.sh
runtime/src/: artifact.rs  bootstrap_crypto.js  bootstrap_flux.js  checkpoint.rs  checkpoint_store.rs  contracts.rs  deno_runtime.rs  http_runtime.rs  isolate_pool.rs  lib.rs  main.rs  server_client.rs  state.rs
runtime/tests/: IMPLEMENTATION_STATUS.txt  README.md  boot_execution.rs  fetch_contract.rs  network_contract.rs  package-lock.json  package.json  postgres_contract.rs  redis_contract.rs  run_script_modules.rs  server_mode_polyfills.rs  tsconfig.json
server/: Cargo.toml  Dockerfile  Dockerfile.prod  build.rs
server/proto/: internal_auth.proto
server/src/: core.rs  grpc.rs  main.rs
shared/: Cargo.toml  build.rs
shared/api_contract/: Cargo.toml
shared/job_contract/: Cargo.toml
shared/proto/: internal_auth.proto
(+1065 files in other folders)
