[package]
name        = "agent"
version     = "0.1.0"
edition     = "2024"
description = "Flux agent execution engine — pure-Rust LLM orchestration loop."

[lib]
name = "agent"

[dependencies]
# Internal
job_contract = { path = "../shared/job_contract" }

# Async
tokio        = { version = "1", features = ["full"] }
async-trait  = "0.1"

# Serialization
serde        = { version = "1", features = ["derive"] }
serde_json   = "1"
serde_yaml   = "0.9"

# Database
sqlx         = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "json", "chrono"] }

# HTTP (LLM calls)
reqwest      = { version = "0.13", features = ["json", "rustls"], default-features = false }

# Hashing (content_sha)
sha2         = "0.10"
hex          = "0.4"

# UUIDs
uuid         = { version = "1", features = ["v4", "serde"] }

# Timestamps
chrono       = { version = "0.4", features = ["serde"] }

# Tracing
tracing      = "0.1"

[dev-dependencies]
wiremock     = "0.6"
async-trait  = "0.1"
tokio        = { version = "1", features = ["full"] }

