[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.8", features = ["multipart"] }
tokio-stream = { version = "0.1", features = ["sync", "time"] }
chrono = { version = "0.4.44", features = ["serde"] }
dotenvy = "0.15.7"
firebase-auth = { version = "0.5.1", default-features = false, features = ["rustls"] }
jsonwebtoken = "10.3.0"
reqwest = { version = "0.13.2", features = ["json", "rustls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio", "uuid", "chrono", "macros", "tls-rustls"] }
tokio = { version = "1.50.0", features = ["full"] }
tower = { version = "0.5.3", features = ["util"] }
tower-http = { version = "0.6.8", features = ["trace", "cors"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
uuid = { version = "1.22.0", features = ["v4", "serde"] }

# Crypto
aes-gcm = "0.10"
rand = "0.8"
base64 = "0.22"
sha2 = "0.10.9"
hex = "0.4.3"
aws-sdk-s3 = "1.125.0"
aws-config = "1.8.15"
flate2 = "1"
