[package]
name = "api"
version = "0.1.0"
edition = "2024"

[lib]
name = "api"
path = "src/lib.rs"

[[bin]]
name = "api"
path = "src/main.rs"

# ──────────────────────────────────────────────────────────────────────────────
# API service dependencies
#
# Removed from previous cloud-SaaS build:
#   firebase-auth   — replaced by optional FLUX_API_KEY env var
#   jsonwebtoken    — was firebase dependency
#   tokio-stream    — was SSE events broadcast (removed in Phase 0)
#   flate2          — was S3 log archiver gzip compression (removed)
# ──────────────────────────────────────────────────────────────────────────────
[dependencies]
axum = { version = "0.8.8", features = ["multipart"] }
chrono = { version = "0.4.44", features = ["serde"] }
dotenvy = "0.15.7"
reqwest = { version = "0.13.2", features = ["json", "rustls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio", "uuid", "chrono", "macros", "tls-rustls"] }
tokio = { version = "1.50.0", features = ["full"] }
futures-util = "0.3"
tower = { version = "0.5.3", features = ["util"] }
tower-http = { version = "0.6.8", features = ["trace", "cors", "fs"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
uuid = { version = "1.22.0", features = ["v4", "serde"] }

# Crypto — AES-256-GCM encryption for secrets at rest
aes-gcm = "0.10"
rand = "0.8"
base64 = "0.22"

# Schema hashing — SHA-256 for schema_versions content-based cache key
sha2 = "0.10"
hex = "0.4"

# Object storage — function bundle upload/download (minio in dev, S3/R2 in prod)
aws-sdk-s3 = "1.125.0"
aws-config = "1.8.15"

# Dashboard auth — password hashing + JWT session tokens
argon2        = "0.5"
jsonwebtoken  = "9"

# Job contract — dispatch traits
job_contract = { path = "../shared/job_contract" }
