[package]
name = "cli"
version = "0.1.1"
edition = "2024"

[[bin]]
name = "flux"
path = "src/main.rs"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["clock"] }
clap = { version = "4.5.60", features = ["derive", "env"] }
dirs = "6.0.0"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rpassword = "7.4.0"
shared = { path = "../shared" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.50.0", features = ["macros", "rt-multi-thread", "process"] }
toml = "0.8"
tonic = { version = "0.12", features = ["transport"] }
prost = "0.13"
