[package]
name = "data-engine"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "data-engine"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.50.0", features = ["full"] }
axum = "0.8.8"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
uuid = { version = "1.22.0", features = ["v4", "serde"] }
chrono = { version = "0.4.44", features = ["serde"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
dotenvy = "0.15.7"
anyhow = "1.0"
thiserror = "1.0"
tower-http = { version = "0.6.8", features = ["cors"] }
reqwest = { version = "0.13.2", features = ["json", "rustls"] }
