[package]
name = "data-engine"
version = "0.1.1"
edition = "2021"

[lib]
name = "data_engine"
path = "src/lib.rs"

[[bin]]
name = "data-engine"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.50.0", features = ["full"] }
axum = "0.8.8"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
uuid = { version = "1.22.0", features = ["v4", "serde"] }
chrono = { version = "0.4.44", features = ["serde"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
dotenvy = "0.15.7"
anyhow = "1.0"
thiserror = "1.0"
tower-http = { version = "0.6.8", features = ["cors"] }
reqwest = { version = "0.13.2", features = ["json", "rustls"], default-features = false }
sha2   = "0.10"
subtle = "2"
hex  = "0.4"
hmac = "0.12"
cron = "0.12"
moka = { version = "0.12.14", features = ["sync"] }
api_contract = { path = "../shared/api_contract" }

[dev-dependencies]
tower = { version = "0.5.3", features = ["util"] }
