[package]
name = "gateway"
version = "0.1.0"
edition = "2024"

[lib]
name = "gateway"
path = "src/lib.rs"

[[bin]]
name = "gateway"
path = "src/main.rs"

[dependencies]
async-trait = "0.1"
axum = { version = "0.8.8", features = ["macros"] }
tokio = { version = "1.50.0", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "postgres", "uuid", "chrono", "macros", "tls-rustls"] }
reqwest = { version = "0.13.2", features = ["json", "rustls", "stream"] }
uuid = { version = "1.22.0", features = ["v4", "serde"] }
tower-http = { version = "0.6.8", features = ["cors", "trace"] }
dashmap = "6.1.0"
anyhow = "1.0.96"
chrono = { version = "0.4.44", features = ["serde"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
lazy_static = "1.5.0"
dotenvy = "0.15.7"
jsonwebtoken = "10.3.0"
jsonschema = "0.44.1"
job_contract = { path = "../shared/job_contract" }
sha2 = "0.10"
bytes = "1"
base64 = "0.22"
futures = "0.3"
