[package]
name = "flux-queue"
version = "0.1.1"
edition = "2021"

[lib]
name = "flux_queue"
path = "src/lib.rs"

[[bin]]
name = "queue"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.50.0", features = ["full"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "json"] }
axum = "0.8.8"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
uuid = { version = "1.22.0", features = ["v4", "serde"] }
chrono = { version = "0.4.44", features = ["serde"] }
reqwest = { version = "0.13.2", features = ["json", "rustls"], default-features = false }
tower = "0.5.3"
tower-http = { version = "0.6.8", features = ["cors"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
dotenvy = "0.15.7"
anyhow = "1.0"
job_contract = { path = "../shared/job_contract" }
async-trait = "0.1"
rand = "0.8"
