[package]
name = "runtime"
version = "0.1.1"
edition = "2024"

[lib]
name = "runtime"
path = "src/lib.rs"

[dependencies]
anyhow = "1"
axum = "0.7"
deno_core = "0.290"
hex = "0.4"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "sync"] }
tonic = { version = "0.12", features = ["transport"] }
prost = "0.13"
tracing = "0.1"
uuid = { version = "1", features = ["v4"] }

[build-dependencies]
tonic-build = "0.12"
protoc-bin-vendored = "3"
