[package]
name          = "server"
version       = "0.1.1"
edition       = "2024"
description   = "Flux server — receives gRPC calls and writes to PostgreSQL."

[[bin]]
name = "server"
path = "src/main.rs"

[dependencies]
tokio         = { version = "1", features = ["full"] }
sqlx          = { version = "0.8", features = ["postgres", "runtime-tokio-rustls", "uuid"] }
serde_json    = "1"
tracing          = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy       = "0.15"
tonic         = { version = "0.12", features = ["transport"] }
prost         = "0.13"
tokio-stream  = "0.1"
sha2          = "0.10"
hex           = "0.4"
subtle        = "2"
uuid          = { version = "1", features = ["v4"] }

[build-dependencies]
tonic-build          = "0.12"
protoc-bin-vendored  = "3"
