[package]
name          = "shared"
version       = "0.2.6"
edition       = "2021"
description   = "Shared proto types for flux, flux-server, and flux-runtime."

[lib]
name = "shared"
path = "src/lib.rs"

[dependencies]
tonic = { version = "0.12", features = ["transport"] }
prost = "0.13"
serde = { version = "1.0", features = ["derive"] }

[build-dependencies]
tonic-build         = "0.12"
protoc-bin-vendored = "3"
