[package]
name = "job_contract"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
uuid = { version = "1.22.0", features = ["serde"] }

[dev-dependencies]
uuid = { version = "1.22.0", features = ["serde", "v4"] }

tokio = { version = "1", features = ["full"] }
