[package]
name = "{name}"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"

[profile.release]
opt-level = "z"
lto       = true

# Opt out of the Flux monorepo workspace — this is a standalone project.
[workspace]
